--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>CatPhotoApp</title>
-  </head>
+<html>
+<head></head>
   <body>
     <main>
       <h1>CatPhotoApp</h1>
