--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<html>
-<head></head>
+<!DOCTYPE html>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>CatPhotoApp</title>
+  </head>
   <body>
     <main>
       <h1>CatPhotoApp</h1>
